--- a/Imagemnadiv.html
+++ b/Imagemnadiv.html
@@ -7,39 +7,40 @@
      <meta http-equiv="X-UA-Compatible" content="le-edge" />
 <title>15 de outubro dia do professor</title>
 <style>
-*
-{
-padding: 0:
-margin: 0:
+*{
+padding: 0;
+margin: 0;
 }
-header,
-footer {
-display: flex:
-flex-direction: column:
-Justify-content: center:
-height: 120px: 
-background-color: #151515:
+
+header,footer {
+display: flex;
+flex-direction: column;
+Justify-content: center;
+height: 120px;
+background-color: #151515;
 }
-main (
-display: flex:
+
+main {
+display: flex;
 justify-content: center;
 }
-h1
-h3 (
 
-color: chocolate:
+h1,  h3{
+color: chocolate;
 text-align: center;
 }
+
 .foto {
-margin: 30px 0px 0px 30px:
-padding: 30px:
-height: 600px:
-width: 600px
-background-color: #f5f5f5:
-border-radius: 20px:
-box-shadow: 5px 10px #88888:
-background-image: url("Imagem.jpg"):
-background-size: cover:
+margin:30px 50px 0px 0px 30;
+padding: 30px;
+height: 600px;
+width: 600px;
+background-color: #f5f5f57f;
+border-radius: 20px;
+box-shadow: 5px 10px #88888;
+background-image: url("./lindaa.jpg");
+background-size: cover;
+}
 </style> </head>
 
 <body>
