--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ width: 600px;
 background-color: #f5f5f57f;
 border-radius: 20px;
 box-shadow: 5px 10px #88888;
-background-image: url("./lindaa.jpg");
+background-image: url("./IMG_20230327_092222.jpg;
 background-size: cover;
 }
 </style> </head>
