--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-<p><h3>TEXTO 1</h3>“Sou seletivo em minhas leituras. Leio gastronomicamente. Diante de jornais e revistas eu me comporto da mesma forma como diante de uma mesa de bufê: provo, rejeito muito, escolho poucas coisas. Concordo com Zaratustra: “mastigar e digerir tudo, essa é uma maneira suína”.
+<ul><p><h3>TEXTO 1</h3>“Sou seletivo em minhas leituras. Leio gastronomicamente. Diante de jornais e revistas eu me comporto da mesma forma como diante de uma mesa de bufê: provo, rejeito muito, escolho poucas coisas. Concordo com Zaratustra: “mastigar e digerir tudo, essa é uma maneira suína”.
 As escolhas que a imprensa faz revelam o que ela pensa do gosto gastronômico dos seus leitores. Jornais são refeições, bufês de notícias selecionadas segundo um gosto preciso. Se o filósofo alemão Ludwing Feuerbach estava certo ao afirmar que “somos o que comemos”, será forçoso concluir que, ao servir refeições de notícias ao povo, os jornais realizam uma magia perversa com seus leitores: depois de comer eles serão iguais àquilo que leram.
 Faz tempo que parei de ler jornais. “Leio sim, movido pelo espírito apressado da leitura dinâmica; apressadamente, deslizando meus olhos pelas manchetes para saber o que está acontecendo, mais para ficar a par do menu de conversas estabelecido pelos jornais...”</p>
 
@@ -89,7 +89,7 @@ Faz tempo que parei de ler jornais. “Leio sim, movido pelo espírito apressado
 
 
 
-<ul>  <h3>TEXTO 2</h3>
+ <h3>TEXTO 2</h3>
 <h4>Canção</h4>
  
 <p>Pus o meu sonho num navio</p>
@@ -115,7 +115,7 @@ Faz tempo que parei de ler jornais. “Leio sim, movido pelo espírito apressado
 <ul><p>Depois, tudo estará perfeito;</p>
 <p>praia lisa, águas ordenadas,</p>
 <p>meus olhos secos como pedras</p>
-<p>e as minhas duas mãos quebradas.</p></ul>
+<p>e as minhas duas mãos quebradas.</p><
 
 <p>(Cecília Meireles) </p>
 
@@ -258,7 +258,7 @@ Considerando-se a relação verso/figura de linguagem, pode-se afirmar que</span
  <p><input type="radio" name="e28" value="e"> <span id="errado84">(e) É um tanto esotérico, pois fala dos pressentimentos da autora sobre perdas futuras.</span> </p>
  </span></div>
 
-
+</ul>
 <br>
  <input type="button" name ="conferir2" value="Conferir" onClick="exercicio2(this.form)">
  </form>
