--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
-    <script src="respostas.js"></script>
+    
 
 <title>PROVA ONLINE</title>
 
 <head>
 
-<link href"telacss.css" rele"stylesheet">
+<link href"telacss.css"rel="stylesheet">
 
 <body>
+<script src="respostas.js"></script>
 <h1>Avalição de Português</h1>
 
 
@@ -64,7 +65,7 @@ Faz tempo que parei de ler jornais. “Leio sim, movido pelo espírito apressado
 
 <p><span class="exemplo2"> </p>
 
-<p> <input type="radio" name="e23" value="a"> <span id="errado30"> (a) por Rubem Alves </span></p>
+<ul><p> <input type="radio" name="e23" value="a"> <span id="errado30"> (a) por Rubem Alves </span></p>
 
 <p><input type="radio" name="e23" value="b"> <span id="certo3">(b) por Zaratustra  </span></p>
 
