--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <head>
 
-<link href"telacss.css"rel="stylesheet">
+<link href"./telacss.css"rel="stylesheet">
 
 <body>
-<script src="respostas.js"></script>
+<script src="./respostas.js"></script>
 <h1>Avalição de Português</h1>
 
 
