--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
     
-
-<title>PROVA ONLINE</title>
-
 <head>
-
+<title>PROVA ONLINE</title>
 <link href"./telacss.css"rel="stylesheet">
-
+</head>
 <body>
 <script src="./respostas.js"></script>
 <h1>Avalição de Português</h1>
